# murmur

./: .gitignore  .release-please-manifest.json  .repo-structure.yml  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  commitlint.config.mjs  index.html  onboarding.html  package.json  pnpm-lock.yaml  popup.html  release-please-config.json  settings.html  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  commitlint.yml  history-scan.yml  public-hygiene.yml  release-please.yml  release.yml  secret-scan.yml  test-build-22.yml
design/: DESIGN.html  FAKE_COMPETITOR.md  fake-secret.txt  skin-test.html
docs/superpowers/plans/: 2026-04-05-user-accounts-pro-tier.md
scripts/: recolour-logo.py
src/: index.tsx  onboarding.tsx  popup.css  popup.tsx  settings.tsx  styles.css
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/debian/: 99-murmur.rules  postinst.sh  prerm.sh
src-tauri/src/: byok_storage.rs  lib.rs  main.rs  pro_state.rs  state.rs
src-tauri/src/audio/: capture.rs
src-tauri/src/cleanup/: anthropic.rs  factory.rs  groq.rs  mod.rs  prompt.rs  sanity.rs  xai.rs
src-tauri/src/commands/: audio.rs  byok.rs  hotkey.rs  hotkey_evdev.rs  hotkey_wayland.rs  llm_cleanup.rs  mod.rs  models.rs  popup.rs  pro.rs  settings.rs
src-tauri/src/inject/: display_server.rs  mod.rs  paste.rs  portal_input.rs
src-tauri/src/stt/: engine.rs  local_whisper.rs  mod.rs  model_manager.rs  whisper.rs
src-tauri/tests/: byok_keyring_smoke.rs  shared_setup_smoke.rs
src/assets/skins/comm-badge/: skin.json
src/assets/skins/gemini-v1/: skin.json
src/components/: AICleanupSection.tsx  AnimatedCheck.tsx  GadgetWindow.tsx  GearButton.tsx  Icon.tsx  LedIndicators.tsx  MicButton.tsx  MurmurLogo.tsx  OnboardingWizard.tsx  ProGate.tsx  RecordModeToggle.tsx  RecordingPopup.tsx  SavedKeysSection.tsx  Select.tsx  SettingsPanel.tsx  SkinRenderer.tsx  StatusLed.tsx  Toggle.tsx  Waveform.tsx  WaveformPlaceholder.tsx
src/lib/: auth.ts  color.ts  settings.ts  skin-loader.ts
