[package]
name = "murmur_lib"
version = "0.3.6" # x-release-please-version
edition = "2021"
description = "AI voice-to-text gadget for Linux. Speak anywhere, type everywhere."
homepage = "https://murmurlinux.com"
repository = "https://github.com/murmurlinux/murmur"
license = "GPL-3.0"

[lib]
name = "murmur_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Enables the Wayland portal hotkey path (#129). Requires the patched
# global-hotkey crate (see [patch.crates-io] below). Off by default so
# downstream workspaces (e.g. the blind test crate) that build murmur_lib
# without applying the patch still compile.
wayland-portal = []

[[bin]]
name = "murmur"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-utils = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
cpal = "0.15"
whisper-rs = { version = "0.16", features = ["vulkan"] }
arboard = "3"
tauri-plugin-global-shortcut = "2"
global-hotkey = "0.7"
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
directories = "5"
sha2 = "0.10"
hex = "0.4"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Wayland global-hotkey support (#129).
# Vendors tauri-apps/global-hotkey#162 by @Adamskye, which adds the
# org.freedesktop.portal.GlobalShortcuts backend used on Wayland sessions.
# Upstream PR is review-ready but unmerged since 2025-11. Drop this patch
# the moment it lands upstream and bump tauri-plugin-global-shortcut.
[patch.crates-io]
global-hotkey = { git = "https://github.com/Adamskye/global-hotkey.git", branch = "wayland_support" }

