[package]
name = "murmur_lib"
version = "0.3.11" # x-release-please-version
edition = "2021"
description = "AI voice-to-text gadget for Linux. Speak anywhere, type everywhere."
homepage = "https://murmurlinux.com"
repository = "https://github.com/murmurlinux/murmur"
license = "GPL-3.0"
default-run = "murmur"

[lib]
name = "murmur_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "murmur"
path = "src/main.rs"

[[bin]]
name = "murmur-input-helper"
path = "src/bin/murmur-input-helper.rs"
required-features = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-utils = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
cpal = "0.15"
whisper-rs = { version = "0.16", features = ["vulkan"] }
arboard = "3"
tauri-plugin-global-shortcut = "2"
reqwest = { version = "0.13", features = ["blocking", "json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
directories = "5"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"

# OS keyring (secret-service over D-Bus on Linux) for BYOK API keys.
# sync-secret-service avoids tokio/async-runtime entanglement; we call
# it from a std::thread::spawn block in audio.rs which is already sync.
# crypto-rust uses pure-Rust RustCrypto instead of OpenSSL so there is
# no new system library link or .deb runtime dependency.
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

# Wayland global hotkey support (#129) is implemented via direct evdev
# reads (see commands/hotkey_evdev.rs). The xdg-desktop-portal
# GlobalShortcuts API does not deliver reliable Released events for
# hold-to-talk on GNOME Wayland; evdev is what every comparable Linux
# voice-to-text app ships. /lib/udev/rules.d/99-murmur.rules grants the
# active local user read access to /dev/input/event* via systemd-logind
# session ACLs (TAG+="uaccess"), so no `input` group membership is
# required on Ubuntu 26.04 LTS.
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"
nix = { version = "0.29", features = ["user"] }
